# ListOBranch

./: CMakeLists.txt  LICENSE  README.md  build_lib.bat  build_lib.sh  build_terminal.bat  build_terminal.sh  main.cpp
GUI/: CMakeLists.txt  main.cpp
Terminal/: CMakeLists.txt  main.cpp
include/ListOBranch/: branch.h  export.h  listobranch.h  repo.h
src/: CMakeLists.txt  ListOBranch.cpp  repo.cpp
